Small tweak on yank

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@ bind R run-shell ' \
 	tmux display-message "Sourced .tmux.conf!"'
 
 bind-key a capture-pane -J -S -100000 \; save-buffer ~/src/tmux-buffer \; delete-buffer
+bind-key y save-buffer ~/src/tmux-buffer
  
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
