Fixes for tmux 2.3

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,9 @@ bind -n S-Right next-window
 
 bind -n C-k clear-history
 
+#bind-key -t vi-copy MouseDragEnd1Pane copy-selection -x
+unbind -t vi-copy MouseDragEnd1Pane
+
 #bind -n M-PPage copy-mode -u
 
 set -g mouse on
@@ -25,6 +28,7 @@ set -g set-titles on
 set -g history-limit 50000
 set -g status-keys vi
 set -g focus-events on
+set -g renumber-windows on
 
 set -s escape-time 0
 set -s default-terminal "screen-256color"
