More tmux tweaks for live presentation

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,8 +5,11 @@ bind R run-shell ' \
 	tmux source-file ~/.tmux.conf > /dev/null; \
 	tmux display-message "Sourced .tmux.conf!"'
 
-bind-key a capture-pane -J -S -100000 \; save-buffer ~/src/tmux-buffer \; delete-buffer
-bind-key y save-buffer ~/src/tmux-buffer
+bind a capture-pane -J -S -100000 \; save-buffer ~/src/tmux-buffer \; delete-buffer
+bind y save-buffer ~/src/tmux-buffer
+
+bind s setw synchronize-panes on
+bind S setw synchronize-panes off
  
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
@@ -16,12 +19,10 @@ bind -n M-Down select-pane -D
 bind -n S-Left previous-window
 bind -n S-Right next-window
 
-bind -n C-k clear-history
+bind -n C-k send-keys -R \; send-keys C-l \; clear-history
 
 #bind-key -t vi-copy MouseDragEnd1Pane copy-selection -x
 unbind -t vi-copy MouseDragEnd1Pane
-
-#bind -n M-PPage copy-mode -u
 
 set -g mouse on
 set -g set-titles on
