--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,7 +21,6 @@ bind -n S-Right next-window
 
 bind -n C-k send-keys -R \; send-keys C-l \; clear-history
 
-#bind-key -t vi-copy MouseDragEnd1Pane copy-selection -x
 unbind -t vi-copy MouseDragEnd1Pane
 
 set -g mouse on
@@ -39,8 +38,9 @@ setw -g aggressive-resize on
 
 set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
 set -g @resurrect-processes ':all:'
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '0'
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
