Tweaks for tmux 2.5

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,7 @@
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+bind c new-window -ac "#{pane_current_path}"
 
 bind R run-shell ' \
 	tmux source-file ~/.tmux.conf > /dev/null; \
@@ -8,8 +10,13 @@ bind R run-shell ' \
 bind a capture-pane -J -S -100000 \; save-buffer ~/src/tmux-buffer \; delete-buffer
 bind y save-buffer ~/src/tmux-buffer
 
-bind s setw synchronize-panes on
-bind S setw synchronize-panes off
+bind s if -F '#{pane_synchronized}' \
+		'setw synchronize-panes off; \
+		 setw pane-active-border-style fg=green; \
+		 setw pane-border-style default' \
+		'setw synchronize-panes on; \
+		 setw pane-active-border-style fg=red; \
+		 setw pane-border-style fg=yellow'
  
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
@@ -21,7 +28,14 @@ bind -n S-Right next-window
 
 bind -n C-k send-keys -R \; send-keys C-l \; clear-history
 
-unbind -t vi-copy MouseDragEnd1Pane
+bind -T copy-mode-vi MouseDragEnd1Pane select-pane \; send-keys -X stop-selection
+bind -T copy-mode-vi DoubleClick1Pane select-pane \; send-keys -X select-word \; send-keys -X stop-selection
+bind -T copy-mode-vi TripleClick1Pane select-pane \; send-keys -X select-line \; send-keys -X stop-selection
+
+bind -T copy-mode-vi / command-prompt -i -p "search down" "send -X search-forward-incremental \"%%%\""
+#bind -T copy-mode-vi ? command-prompt -i -p "search up" "send -X search-backward-incremental \"%%%\""
+
+bind / copy-mode \; command-prompt -i -p "search down" "send -X search-forward-incremental \"%%%\""
 
 set -g mouse on
 set -g set-titles on
@@ -44,6 +58,5 @@ set -g @continuum-save-interval '0'
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'tmux-plugins/tmux-copycat'
 
 run '~/.tmux/plugins/tpm/tpm'
