--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,9 +3,7 @@ bind - split-window -v -c "#{pane_current_path}"
 
 bind c new-window -ac "#{pane_current_path}"
 
-bind R run-shell ' \
-	tmux source-file ~/.tmux.conf > /dev/null; \
-	tmux display-message "Sourced .tmux.conf!"'
+bind R run-shell 'tmux source-file ~/.tmux.conf > /dev/null; tmux display-message "Sourced .tmux.conf"'
 
 bind a capture-pane -J -S -100000 \; save-buffer ~/src/tmux-buffer \; delete-buffer
 bind y save-buffer ~/src/tmux-buffer
@@ -54,9 +52,9 @@ set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-processes ':all:'
 set -g @continuum-restore 'on'
-set -g @continuum-save-interval '0'
+#set -g @continuum-save-interval '0'
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+#set -g @plugin 'tmux-plugins/tmux-continuum'
 
 run '~/.tmux/plugins/tpm/tpm'
