--- a/settings.json
+++ b/settings.json
@@ -1,20 +1,28 @@
 {
         "C_Cpp.intelliSenseEngine": "Tag Parser",
+        "diffEditor.ignoreTrimWhitespace": false,
+        "editor.autoClosingBrackets": false,
+        "editor.autoIndent": false,
         "editor.renderWhitespace": "all",
         "editor.tabSize": 8,
         "explorer.confirmDelete": false,
+        "explorer.confirmDragAndDrop": false,
         "extensions.ignoreRecommendations": false,
         "files.insertFinalNewline": true,
         "files.trimFinalNewlines": true,
         "files.trimTrailingWhitespace": true,
+        // "git.autofetch": false,
+        // "git.autorefresh": false,
         "git.confirmSync": false,
         "git.enableSmartCommit": true,
         "gitlens.blame.line.enabled": false,
         "gitlens.codeLens.authors.enabled": false,
         "gitlens.codeLens.recentChange.enabled": false,
+        // "gitlens.gitExplorer.autoRefresh": false
         "java.errors.incompleteClasspath.severity": "ignore",
+        "rewrap.wrappingColumn": 75,
         "window.newWindowDimensions": "maximized",
         "window.restoreWindows": "all",
         "window.zoomLevel": 0,
-        "workbench.startupEditor": "none"
+        "workbench.startupEditor": "none",
 }
