--- a/settings.json
+++ b/settings.json
@@ -1,27 +1,37 @@
 {
+        "C_Cpp.dimInactiveRegions": false,
         "C_Cpp.intelliSenseEngine": "Tag Parser",
         "diffEditor.ignoreTrimWhitespace": false,
         "editor.autoClosingBrackets": false,
         "editor.autoIndent": false,
+        "editor.minimap.enabled": false,
+        "editor.renderControlCharacters": true,
         "editor.renderWhitespace": "all",
         "editor.tabSize": 8,
         "explorer.confirmDelete": false,
         "explorer.confirmDragAndDrop": false,
-        "extensions.ignoreRecommendations": false,
         "files.insertFinalNewline": true,
         "files.trimFinalNewlines": true,
         "files.trimTrailingWhitespace": true,
-        // "git.autofetch": false,
-        // "git.autorefresh": false,
         "git.confirmSync": false,
-        "git.enableSmartCommit": true,
-        "gitlens.blame.line.enabled": false,
-        "gitlens.codeLens.authors.enabled": false,
-        "gitlens.codeLens.recentChange.enabled": false,
-        // "gitlens.gitExplorer.autoRefresh": false
+        "gitlens.advanced.messages": {
+                "suppressResultsExplorerNotice": true,
+                "suppressShowKeyBindingsNotice": true
+        },
+        "gitlens.codeLens.enabled": false,
+        "gitlens.gitExplorer.files.layout": "list",
+        "gitlens.historyExplorer.enabled": false,
+        "gitlens.historyExplorer.location": "scm",
+        "gitlens.resultsExplorer.files.layout": "list",
+        "gitlens.resultsExplorer.location": "scm",
+        "gitlens.keymap": "alternate",
         "java.errors.incompleteClasspath.severity": "ignore",
         "rewrap.wrappingColumn": 75,
+        "search.location": "panel",
+        "terminal.integrated.showExitAlert": false,
+        "window.nativeTabs": true,
         "window.newWindowDimensions": "maximized",
+        "window.openFoldersInNewWindow": "on",
         "window.restoreWindows": "all",
         "window.zoomLevel": 0,
         "workbench.startupEditor": "none",
