--- a/settings.json
+++ b/settings.json
@@ -14,6 +14,7 @@
         "files.trimFinalNewlines": true,
         "files.trimTrailingWhitespace": true,
         "git.confirmSync": false,
+        "git.enableSmartCommit": true,
         "gitlens.advanced.messages": {
                 "suppressResultsExplorerNotice": true,
                 "suppressShowKeyBindingsNotice": true
