--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,8 @@
 {
+        "breadcrumbs.enabled": true,
         "C_Cpp.dimInactiveRegions": false,
         "C_Cpp.intelliSenseEngine": "Tag Parser",
         "diffEditor.ignoreTrimWhitespace": false,
-        "editor.autoClosingBrackets": false,
         "editor.autoIndent": false,
         "editor.minimap.enabled": false,
         "editor.renderControlCharacters": true,
@@ -10,22 +10,22 @@
         "editor.tabSize": 8,
         "explorer.confirmDelete": false,
         "explorer.confirmDragAndDrop": false,
+        "extensions.ignoreRecommendations": true,
+        "files.hotExit": "onExitAndWindowClose",
         "files.insertFinalNewline": true,
         "files.trimFinalNewlines": true,
         "files.trimTrailingWhitespace": true,
+        "git.allowForcePush": true,
+        "git.alwaysShowStagedChangesResourceGroup": true,
         "git.confirmSync": false,
-        "git.enableSmartCommit": true,
+        "git.fetchOnPull": true,
         "gitlens.advanced.messages": {
-                "suppressResultsExplorerNotice": true,
                 "suppressShowKeyBindingsNotice": true
         },
         "gitlens.codeLens.enabled": false,
         "gitlens.gitExplorer.files.layout": "list",
-        "gitlens.historyExplorer.enabled": false,
-        "gitlens.historyExplorer.location": "scm",
-        "gitlens.resultsExplorer.files.layout": "list",
-        "gitlens.resultsExplorer.location": "scm",
         "gitlens.keymap": "alternate",
+        "gitlens.resultsExplorer.files.layout": "list",
         "java.errors.incompleteClasspath.severity": "ignore",
         "rewrap.wrappingColumn": 75,
         "search.location": "panel",
@@ -34,6 +34,6 @@
         "window.newWindowDimensions": "maximized",
         "window.openFoldersInNewWindow": "on",
         "window.restoreWindows": "all",
-        "window.zoomLevel": 0,
         "workbench.startupEditor": "none",
+        "workbench.tree.horizontalScrolling": true,
 }
