--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -4,10 +4,12 @@
         "C_Cpp.intelliSenseEngine": "Tag Parser",
         "diffEditor.ignoreTrimWhitespace": false,
         "editor.autoIndent": false,
-        "editor.minimap.enabled": false,
+        "editor.insertSpaces": false,
         "editor.renderControlCharacters": true,
+        "editor.renderLineHighlight": "all",
         "editor.renderWhitespace": "all",
         "editor.tabSize": 8,
+        "editor.wrappingIndent": "indent",
         "explorer.confirmDelete": false,
         "explorer.confirmDragAndDrop": false,
         "extensions.ignoreRecommendations": true,
@@ -25,15 +27,24 @@
         "gitlens.codeLens.enabled": false,
         "gitlens.gitExplorer.files.layout": "list",
         "gitlens.keymap": "alternate",
-        "gitlens.resultsExplorer.files.layout": "list",
+        "hexdump.sizeDisplay": 52428800,
+        "java.configuration.updateBuildConfiguration": "automatic",
         "java.errors.incompleteClasspath.severity": "ignore",
+        "problems.decorations.enabled": false,
         "rewrap.wrappingColumn": 75,
+        "search.collapseResults": "alwaysExpand",
         "search.location": "panel",
+        "search.showLineNumbers": true,
+        "search.usePCRE2": true,
         "terminal.integrated.showExitAlert": false,
         "window.nativeTabs": true,
         "window.newWindowDimensions": "maximized",
         "window.openFoldersInNewWindow": "on",
         "window.restoreWindows": "all",
+        "window.zoomLevel": 0,
+        "workbench.activityBar.visible": false,
+        "workbench.settings.editor": "json",
         "workbench.startupEditor": "none",
+        "workbench.statusBar.feedback.visible": false,
         "workbench.tree.horizontalScrolling": true,
 }
