--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -3,6 +3,8 @@
         "C_Cpp.dimInactiveRegions": false,
         "C_Cpp.intelliSenseEngine": "Tag Parser",
         "diffEditor.ignoreTrimWhitespace": false,
+        "diffEditor.renderSideBySide": true,
+        "editor.autoClosingBrackets": "never",
         "editor.autoIndent": false,
         "editor.insertSpaces": false,
         "editor.renderControlCharacters": true,
@@ -25,12 +27,13 @@
                 "suppressShowKeyBindingsNotice": true
         },
         "gitlens.codeLens.enabled": false,
-        "gitlens.gitExplorer.files.layout": "list",
         "gitlens.keymap": "alternate",
+        "gitlens.views.repositories.files.layout": "list",
         "hexdump.sizeDisplay": 52428800,
         "java.configuration.updateBuildConfiguration": "automatic",
         "java.errors.incompleteClasspath.severity": "ignore",
         "problems.decorations.enabled": false,
+        "python.linting.pylintUseMinimalCheckers": false,
         "rewrap.wrappingColumn": 75,
         "search.collapseResults": "alwaysExpand",
         "search.location": "panel",
@@ -44,6 +47,8 @@
         "window.zoomLevel": 0,
         "workbench.editor.highlightModifiedTabs": true,
         "workbench.settings.editor": "json",
+        "workbench.settings.openDefaultSettings": true,
+        "workbench.settings.useSplitJSON": true,
         "workbench.startupEditor": "none",
         "workbench.statusBar.feedback.visible": false,
         "workbench.tree.horizontalScrolling": true,
